--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -9,9 +9,10 @@
           <li class="align-self-center">
             Пользователь: {{ user.username }}
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'users:logout' %}">Выйти</a>
-          </li>
+          <form action="{% url 'users:logout' %}" method="post" style="display:inline;">
+              {% csrf_token %}
+              <button type="submit" class="nav-link btn btn-link" style="color: inherit;">Выйти</button>
+          </form>
         {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'users:login' %}">Войти</a>
